103: settings for tests for Java 9 and above
Task-Url: https://github.com/LorenzoBettini/javamm/issues/103